# do_you_even_diff_bro

./: .gitignore  .pre-commit-config.yaml  README.html  README.md  pyproject.toml
.github/workflows/: code_review.yml  code_review_v2.yml  labeler.yml  lint.yml
diffs/: diff_20231108_202312.diff  diff_20231108_203624.diff  full_diff_20231108_211636.diff  full_diff_20231108_213859.diff  full_diff_20231108_214712.diff
py_do_you_even_diff_bro/: __init__.py  code_review.py  commandments.py  constants.py  create_test_diff.py  git.py  llm.py  main.py  models.py  utils.py
tests/: test_main.py
