[tool.poetry]
name = "do-you-even-diff-bro"
version = "0.1.0"
description = "An AI code bro to review your diff locally."
authors = ["Ted Fulk <tfulk@getspiffy.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.3"
openai = "^0.28.1"
pre-commit = "^3.5.0"
pytest = "^7.4.3"
pydantic = "^2.4.2"
typer = {extras = ["all"], version = "^0.9.0"}
pytest-mock = "^3.12.0"
pytest-cov = "^4.1.0"
flake8-unused-arguments = "0.0.6"



[tool.poetry.group.dev.dependencies]
ipython = "^8.17.1"
isort = "^5.12.0"
black = "^23.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
